--- a/docker/production/nginx/nginx.conf
+++ b/docker/production/nginx/nginx.conf
@@ -11,7 +11,7 @@ http {
 
     server {
         listen 80;
-        server_name localhost;
+        server_name studynexus.ng www.studynexus.ng;
         root /var/www/public;
 
         add_header X-Frame-Options "SAMEORIGIN";
