--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -99,6 +99,18 @@ services:
       timeout: 5s
       retries: 3
 
+  phpmyadmin:
+    image: phpmyadmin
+    restart: unless-stopped
+    ports:
+      - 8888:80
+    environment:
+      - PMA_HOST=studynexus-mysql
+      - PMA_PORT=3306
+      - PMA_ARBITRARY=1
+    networks:
+      - studynexus-production
+
 networks:
   # Attach the service to the 'studynexus' network.
   # -----------------------------------------------------------
