--- a/docker/production/nginx/nginx.conf
+++ b/docker/production/nginx/nginx.conf
@@ -11,6 +11,7 @@ http {
 
     server {
         listen 80;
+        listen 443 ssl http2;  # Listen on port 443 with SSL and HTTP/2 enabled
         server_name studynexus.ng www.studynexus.ng;
         root /var/www/public;
 
