--- a/docker/production/nginx/nginx.conf
+++ b/docker/production/nginx/nginx.conf
@@ -11,7 +11,6 @@ http {
 
     server {
         listen 80;
-        listen 443 ssl http2;  # Listen on port 443 with SSL and HTTP/2 enabled
         server_name studynexus.ng www.studynexus.ng;
         root /var/www/public;
 
@@ -44,4 +43,45 @@ http {
         }
             
     }
+
+
+    server {
+    listen 443 ssl http2;
+    server_name studynexus.ng www.studynexus.ng;
+
+    root /var/www/public;
+    index index.php;
+    charset utf-8;
+
+    ssl_certificate /etc/ssl/certs/fullchain.pem;
+    ssl_certificate_key /etc/ssl/private/privkey.pem;
+
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-Content-Type-Options "nosniff";
+
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    location = /favicon.ico { access_log off; log_not_found off; }
+    location = /robots.txt  { access_log off; log_not_found off; }
+
+    error_page 404 /index.php;
+
+    location ~ ^/index\.php(/|$) {
+        fastcgi_pass php-fpm:9000;
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        include fastcgi_params;
+        fastcgi_hide_header X-Powered-By;
+    }
+
+    location ~ /\.(?!well-known).* {
+        deny all;
+    }
+}
+
+
+
+
 }
