--- a/docker/production/nginx/nginx.conf
+++ b/docker/production/nginx/nginx.conf
@@ -53,8 +53,8 @@ http {
     index index.php;
     charset utf-8;
 
-    ssl_certificate /etc/ssl/certs/fullchain.pem;
-    ssl_certificate_key /etc/ssl/private/privkey.pem;
+    # ssl_certificate /etc/ssl/certs/fullchain.pem;
+    # ssl_certificate_key /etc/ssl/private/privkey.pem;
 
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-Content-Type-Options "nosniff";
