--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,10 @@ services:
       # -----------------------------------------------------------
       - studynexus-storage-production:/var/www/storage:ro
       - studynexus-public-assets:/var/www/public/build:ro
+      - ./docker/production/nginx/nginx.conf:/etc/nginx/nginx.conf:ro # Override baked-in nginx.conf
+      #- ./docker/production/nginx/conf.d:/etc/nginx/conf.d:ro  # If you have site configs in conf.d (create dir if needed)
+      - ./certbot/www:/var/www/certbot:ro # For ACME challenges
+      - ./certbot/conf:/etc/nginx/ssl:ro # For certificates
     networks:
       - studynexus-production
     ports:
@@ -40,6 +44,7 @@ services:
     volumes:
       - studynexus-public-assets:/var/www/public/build # Mount built public assets to ensure the manifest.json and hashed files match between Nginx and PHP-FPM
       - studynexus-storage-production:/var/www/storage # Mount the storage volume
+      - ./.env:/var/www/.env:rw
     env_file:
       - .env
     networks:
@@ -102,6 +107,7 @@ services:
       retries: 3
 
   phpmyadmin:
+    container_name: studynexus-phpmyadmin
     image: phpmyadmin
     restart: unless-stopped
     ports:
@@ -110,6 +116,17 @@ services:
       - PMA_HOST=studynexus-mysql
       - PMA_PORT=3306
       - PMA_ARBITRARY=1
+    networks:
+      - studynexus-production
+
+  certbot:
+    container_name: studynexus-certbot
+    image: certbot/certbot:latest
+    volumes:
+      - ./certbot/www:/var/www/certbot:rw
+      - ./certbot/conf:/etc/letsencrypt:rw
+    depends_on:
+      - web
     networks:
       - studynexus-production
 
