--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
       - ./docker/production/nginx/nginx.conf:/etc/nginx/nginx.conf:ro # Override baked-in nginx.conf
       #- ./docker/production/nginx/conf.d:/etc/nginx/conf.d:ro  # If you have site configs in conf.d (create dir if needed)
       - ./certbot/www:/var/www/certbot:ro # For ACME challenges
-      - ./certbot/conf:/etc/nginx/ssl:ro # For certificates
+      - ./certbot/conf:/etc/letsencrypt:ro # For certificates
     networks:
       - studynexus-production
     ports:
@@ -116,17 +116,6 @@ services:
       - PMA_HOST=studynexus-mysql
       - PMA_PORT=3306
       - PMA_ARBITRARY=1
-    networks:
-      - studynexus-production
-
-  certbot:
-    container_name: studynexus-certbot
-    image: certbot/certbot:latest
-    volumes:
-      - ./certbot/www:/var/www/certbot:rw
-      - ./certbot/conf:/etc/letsencrypt:rw
-    depends_on:
-      - web
     networks:
       - studynexus-production
 
