--- a/docker/production/nginx/nginx.conf
+++ b/docker/production/nginx/nginx.conf
@@ -49,43 +49,43 @@ http {
     }
 
     # Comment out or omit this HTTPS block until after obtaining the cert
-    # server {
-    #     listen 443 ssl;
-    #     server_name studynexus.ng www.studynexus.ng;
-    #     root /var/www/public;
-    #
-    #     ssl_certificate /etc/nginx/ssl/live/studynexus.ng/fullchain.pem;
-    #     ssl_certificate_key /etc/nginx/ssl/live/studynexus.ng/privkey.pem;
-    #
-    #     # Optional: HSTS for security (enable after testing)
-    #     # add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-    #
-    #     add_header X-Frame-Options "SAMEORIGIN";
-    #     add_header X-Content-Type-Options "nosniff";
-    #
-    #     index index.php;
-    #
-    #     charset utf-8;
-    #
-    #     location / {
-    #         try_files $uri $uri/ /index.php?$query_string;
-    #     }
-    #
-    #     location = /favicon.ico { access_log off; log_not_found off; }
-    #     location = /robots.txt  { access_log off; log_not_found off; }
-    #
-    #     error_page 404 /index.php;
-    #
-    #     location ~ ^/index\.php(/|$) {
-    #         fastcgi_pass php-fpm:9000;
-    #         fastcgi_index index.php;
-    #         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-    #         include fastcgi_params;
-    #         fastcgi_hide_header X-Powered-By;
-    #     }
-    #
-    #     location ~ /\.(?!well-known).* {
-    #         deny all;
-    #     }
-    # }
+    server {
+        listen 443 ssl;
+        server_name studynexus.ng www.studynexus.ng;
+        root /var/www/public;
+    
+        ssl_certificate /etc/nginx/ssl/live/studynexus.ng/fullchain.pem;
+        ssl_certificate_key /etc/nginx/ssl/live/studynexus.ng/privkey.pem;
+    
+        # Optional: HSTS for security (enable after testing)
+        # add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    
+        add_header X-Frame-Options "SAMEORIGIN";
+        add_header X-Content-Type-Options "nosniff";
+    
+        index index.php;
+    
+        charset utf-8;
+    
+        location / {
+            try_files $uri $uri/ /index.php?$query_string;
+        }
+    
+        location = /favicon.ico { access_log off; log_not_found off; }
+        location = /robots.txt  { access_log off; log_not_found off; }
+    
+        error_page 404 /index.php;
+    
+        location ~ ^/index\.php(/|$) {
+            fastcgi_pass php-fpm:9000;
+            fastcgi_index index.php;
+            fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+            include fastcgi_params;
+            fastcgi_hide_header X-Powered-By;
+        }
+    
+        location ~ /\.(?!well-known).* {
+            deny all;
+        }
+    }
 }
