--- a/docker/production/nginx/nginx.conf
+++ b/docker/production/nginx/nginx.conf
@@ -54,8 +54,12 @@ http {
         server_name studynexus.ng www.studynexus.ng;
         root /var/www/public;
     
-        ssl_certificate /etc/nginx/ssl/live/studynexus.ng/fullchain.pem;
-        ssl_certificate_key /etc/nginx/ssl/live/studynexus.ng/privkey.pem;
+        # ssl_certificate /etc/nginx/ssl/live/studynexus.ng/fullchain.pem;
+        # ssl_certificate_key /etc/nginx/ssl/live/studynexus.ng/privkey.pem;
+
+        ssl_certificate /etc/letsencrypt/live/studynexus.ng/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/studynexus.ng/privkey.pem;
+
     
         # Optional: HSTS for security (enable after testing)
         # add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
